test_suite5/ALAN/test_suite/alan-2022-examples/failing/003000_mutation.alan
source C begin if 98 put "" relax end end
